Added backwards compatibility for stream()